1999-01-18  Alex Lancaster  <alex@santafe.edu>

	* ProbeTest.m (main): Add return values for all test cases, so
	automake will assign pass/fail correctly.  Tweaked some test
	cases.

1998-01-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ProbeTest.m: Don't import tkobjc.h. 

1997-12-16  Alex Lancaster  <alex@wijiji.santafe.edu>

	* Makefile (LIBNAME): Added to repository. Removed SWARMHOME macro.

	* ProbeTest.m (main): Added to repository. Fixed #import directives.
